--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
-title                    : "Your Name / Site Title"
-title_separator          : "-"
+# locale                   : "en-US"
+# title                    : "Your Name / Site Title"
+# title_separator          : "-"
 name                     : &name "Avijit Mandal"
 description              : &description "personal description"
 url                      : https://avijit-mandal.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
